--- a/orseal_engine/templates/project/index.html
+++ b/orseal_engine/templates/project/index.html
@@ -1,2 +1,27 @@
 <h1>{{ project.title }}</h1>
 
+
+
+<ul>
+    <li><a href="">Organisation</a></li>
+    <li><a href="">Program</a></li>
+    <li><a href="">Service</a></li>
+    <li><a href="">ServiceTaxonomy</a></li>
+    <li><a href="">ServiceAtLocation</a></li>
+    <li><a href="">Location</a></li>
+    <li><a href="">Phone</a></li>
+    <li><a href="">Contact</a></li>
+    <li><a href="">PhysicalAddress</a></li>
+    <li><a href="">PostalAddress</a></li>
+    <li><a href="">RegularScheduleAddress</a></li>
+    <li><a href="">HolidayScheduleAddress</a></li>
+    <li><a href="">Funding</a></li>
+    <li><a href="">Eligibility</a></li>
+    <li><a href="">ServiceArea</a></li>
+    <li><a href="">RequiredDocument</a></li>
+    <li><a href="">PaymentAccepted</a></li>
+    <li><a href="">Language</a></li>
+    <li><a href="">AccessibilityForDisabilities</a></li>
+    <li><a href="">Taxonomy</a></li>
+</ul>
+
