--- a/orseal_engine/templates/project/index.html
+++ b/orseal_engine/templates/project/index.html
@@ -3,7 +3,7 @@
 
 
 <ul>
-    <li><a href="">Organisation</a></li>
+    <li><a href="{% url 'organisation-list' slug=project.slug %}">Organisation</a></li>
     <li><a href="">Program</a></li>
     <li><a href="">Service</a></li>
     <li><a href="">ServiceTaxonomy</a></li>
