--- a/orseal_engine/templates/project/organisation/index.html
+++ b/orseal_engine/templates/project/organisation/index.html
@@ -5,6 +5,10 @@
 
 <table>
     <tr>
+        <th>ID</th>
+        <td>{{ organisation.standard_id }}</td>
+    </tr>
+    <tr>
         <th>Name</th>
         <td>{{ organisation.name }}</td>
     </tr>
