--- a/orseal_engine/templates/project/organisation/index.html
+++ b/orseal_engine/templates/project/organisation/index.html
@@ -6,7 +6,7 @@
 <table>
     <tr>
         <th>ID</th>
-        <td>{{ organisation.standard_id }}</td>
+        <td>{{ organisation.data_id }}</td>
     </tr>
     <tr>
         <th>Name</th>
